Создал возможность добавления новой записи используя формы

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block nav %}
     <li class="nav-item">
-        {#        <a class="nav-link" href="{% url "create_guestbook" %}">Add Note</a>#}
+                <a class="nav-link" href="{% url "create_guestbook" %}">Add Note</a>
     </li>
 {% endblock %}
 {% block content %}
