--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block nav %}
     <li class="nav-item">
-                <a class="nav-link" href="{% url "create_guestbook" %}">Add Note</a>
+        <a class="nav-link" href="{% url "create_guestbook" %}">Add Note</a>
     </li>
 {% endblock %}
 {% block content %}
@@ -15,14 +15,17 @@
                     <div class="card">
                         <div class="card-body">
                             <h5><b>{{ guestbook.author }} ({{ guestbook.email }})</b>
-                                <a href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                <a href="{% url "update_guestbook" guestbook.pk %}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
+                                         fill="currentColor"
                                          class="bi bi-file-earmark-text" viewBox="0 0 16 16">
                                         <path d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
                                         <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
-                                    </svg></a>
-                                <a href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                    </svg>
+                                </a>
+
+                                <a href="{% url "delete_guestbook" guestbook.pk %}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                          class="bi bi-file-earmark-x" viewBox="0 0 16 16">
                                         <path d="M6.854 7.146a.5.5 0 1 0-.708.708L7.293 9l-1.147 1.146a.5.5 0 0 0 .708.708L8 9.707l1.146 1.147a.5.5 0 0 0 .708-.708L8.707 9l1.147-1.146a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146z"/>
                                         <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/>
@@ -30,7 +33,6 @@
                                 </a>
                             </h5>
                             <h5>{{ guestbook.note }}</h5>
-
                         </div>
                     </div>
                 </div>
