--- a/source/webapp/templates/delete.html
+++ b/source/webapp/templates/delete.html
@@ -4,7 +4,7 @@
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        <h1>Удалить запись автора: {{ guestbook.author }}?</h1>
+        <h1>Удалить запись автора: {{ guestbook.author }}?</h1><br>
         <button type="submit" class="btn btn-lg btn-success">ДА</button>
     </form>
     <br>
