--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -12,7 +12,7 @@
         {% for guestbook in guestbooks %}
             {% if guestbook.status == "active" %}
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
+                    <div class="card bg-light text-dark">
                         <div class="card-body">
                             <h5><b>{{ guestbook.author }} ({{ guestbook.email }})</b>
                                 <a href="{% url "update_guestbook" guestbook.pk %}">
@@ -37,5 +37,4 @@
                 </div>
             {% endif %}
         {% endfor %}
-    </div>
 {% endblock %}
